
[2024-01-13]
- Updated the script for Khu'nok the Behemoth to give every member of a group credit.

[2024-03-19]
- Added Gordunni Cobalt to the loot table of Gordunni Ogre for the quest Gordunni Cobalt.
- Added Gordunni Cobalt to the loot table of Gordunni Brute for the quest Gordunni Cobalt.
- Added Gordunni Cobalt to the loot table of Gordunni Ogre Mage for the quest Gordunni Cobalt.
- Updated the flags of Gordunni Cobalt to allow every member of a group to loot it.

[2024-04-03]
- Updated the respawn time of Sealed Box.
- Updated the restock time of Sealed Box.

[2024-04-04]
- Updated the restock time of Ikeyen's Belongings.
- Added Mature Spore Sac to the loot table of Starving Fungal Giant for the quests The Sporelings' Plight and More Spore Sacs.
- Added Mature Spore Sac to the loot table of Starving Bog Lord for the quests The Sporelings' Plight and More Spore Sacs.
- Updated the flags of Mature Spore Sac to allow every member of a group to loot it.
- Added Discarded Nutriment to the loot table of Bog Lord for the quest A Question of Gluttony.
- Added Discarded Nutriment to the loot table of Fungal Giant for the quest A Question of Gluttony.
- Updated the flags of Discarded Nutriment to allow every member of a group to loot it.
- Added the script for world gameobjects to make the quest Missing Friends trigger for every member of a group.

[2024-04-06]
- Updated the smart script for Avatar of Terokk to give every member of a group the kill credit.

[2024-04-13]
- Added the script for the spell Imbue Crystal to make the quest The Stones of Vekh'nir give the item to every member of a group.

[2024-04-17]
- Added the script for the spell Bloodgem Infusion to make the quest Bloodgem Crystals complete for every member of a group.
- Added the script for Commander Dawnforge to make the quest Information Gathering trigger for every member of a group.
- Updated the respawn time of Mana Bomb Fragment.
- Updated the restock time of Suspicious Outhouse.