@@ -342,6 +342,11 @@ INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (1887
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=16948 AND `ItemId`=28551;
 INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (16948, 0, 28551);
 
+-- Energy Isolation Cube (Quest: Potential Energy Source (Id: 10239))
+-- Sunfury Arcanist
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=20134 AND `ItemId`=28564;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (20134, 1, 28564);
+
 -- Bloodmaul Brutebane Brew (Quest: Strange Brew (Id: 10511), Quest: They Stole Me Hookah and Me Brews! (Id: 10542))
 -- Bloodmaul Brewmaster
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=19957 AND `ItemId`=29443;
